app/styles/main.scss
/* ... */
.team {
  background: white;
  position: relative;
  z-index: 5555;
  .full {
    margin-bottom: $vertical;
    &:last-child {
      margin-bottom: $vertical / 3;
    }
  }
  .fluid {
    margin-bottom: $vertical;
    line-height: 0;
  }

  .info {
    width: 60%;
  }
  .image {
    text-align: right;
    width: 40%;
    padding-left: 20px;
    height: 100%;
  }
  .full .third {
    margin-bottom: $vertical / 1.5;
  }
}

.contact {
  background: $slate;
  color: white;
  height: inherit;
  overflow: hidden;
  position: relative;
  z-index: 5555;
  margin-bottom: 180px;
  & > .full {
    margin-bottom: $vertical;
  }
  p, a {
    color: white;
  }
  .half .full {
    margin: $vertical / 2 0 0 0;
  }
  ul li:first-child {
    margin-bottom: 20px;
  }
  .fluid {
    line-height: 0;
    img {
      display: inline-block;
    }
  }
  .full .half .full p {
    padding-bottom: 0;
  }
  input[type="text"]{
    display: block;
    float: left;
    background: none;
    outline: none;
    border: 2px solid #fff;
    padding: 22px 20px 20px 23px;
    color: white;
    width: calc(100% / 3 * 2 + 40px);
    transition: all $cubic .5s;
    &:hover {
      background: rgba(255,255,255,.1);
      cursor: pointer;
    }
    &:focus {
      background: white;
      color: $slate;
    }
  }
  input[type="submit"]{
    display: block;
    position: relative;
    float: right;
    background: none;
    outline: none;
    border: 2px solid #fff;
    border-left: 0;
    padding: 22px 20px 20px 23px;
    color: white;
    width: calc(100% / 3 - 40px);
    transition: all $cubic .5s;
    &:hover {
      background: white;
      color: $slate;
      cursor: pointer;
    }
  }
}

footer {
  position: fixed;
  bottom: 0px;
  width: 100%;
  .full {
    margin: $vertical / 2 0;
  }
}




// Typography

//    Heading
h1, h2 {
  font: 700 50px/60px $oslo;
}

//    Subhead
h3, h4, h5  {
  font: 700 30px/40px $oslo;
}

//    Content
p, a  {
  font: 20px/28px $oslo;
  margin-bottom: 28px;
  color: $slate;
  &:last-child {
    margin-bottom: 0;
  }
}

input, ul, li {
  font: 20px/28px $oslo;  
}


// Responsive

//  Phone
.phone {

  .grid .col{
    width: calc(100% / 2 - 10px);
    margin-right: 20px;
    &:nth-child(2) {
      margin-right: 0;
    }
    &:nth-child(n+3) {
      display: none;
    }
  }

  h1, h2 {
    font: 700 24px/28px $oslo;
  }

  h3, h4, h5  {
    font: 700 18px/24px $oslo;
  }

  p, a  {
    font: 15px/22px $oslo;
    // margin-bottom: 28px;
    // color: $slate;
    &:last-child {
      margin-bottom: 0;
    }
  }

  .menu {
    width: 100%;
    height: 80%;
    padding: 20px;
    //transform: translateX(0) translateY(-100%);
    
    &.open {
      //transform: translateX(0) translateY(0%);
    }
    .nav {
      position: absolute;
      bottom: $vertical / 4;
    }
    .close {
      top: 20px;
      right: 20px;
    }
  }


  input, ul, li {
    font: 15px/22px $oslo;  
  }

  .details {
    display: none;
  }
  section {
    padding: $vertical / 3 0 0 0;
  }

  .logo {
    font: 700 28px/26px $oslo;
  }

  .half, .third {
    width: 100%;
    margin-bottom: $vertical / 3;
  }
  .intro {
    padding-top: $vertical / 4;
  }
  .hero {
    padding: 0 9%;
    h1 {
      font-weight: 500;
    }
  }
  .cookiemonster {
    height: 90px;
    p {
      width: 70%;
    }
    a.close {
      font-size: 40px;
      margin-top: 12px;
      &:hover {
        transform: scale(1);
      }
    }
    &:hover {
      padding:23px 0;
    }
    &.hide {
      bottom: -90px;
    }
  }
  .about {
    .text {
      margin-bottom: 0;
    }
    .images .half {
      margin-bottom: $vertical / 6;
    }
  }
  .news {
    .profile .info {
      padding: 20px;
      p {
        height: inherit;
        padding-bottom: 0;
      }
    }
    .full {
      margin-bottom: $vertical / 3;
      &:first-child {
        padding-right: 60%;
      }
    }
    .half {
      margin-bottom: $vertical / 6;
    }
  }
  .areas {
    .full {
        margin-bottom: $vertical / 3;
    }
    .third {
      margin-bottom: 20px;
    }
    .info {
      padding: 20px 20px 30px 20px;
      p {
        height: inherit;
        padding-bottom: 15px;
      }
      span.more {
        padding-bottom: -10px;
      }
    }
  }
  .exhibitor {
    .full {
      margin-bottom: $vertical / 3;
    }
    .exhibit {
      .info {
        position: relative;
        width: 100%;
        padding: 20px 30% 150px 20px;
        
      }
      .info h3 {
        font: 500 19px/25px $oslo;
      }
      .info .become {
        bottom: 20px;
        padding: 15px 22px;
        border-width: 1px;
      }
      .image {
        width: 100%;
      }
    }
  }
  .team {
    padding-top: 0;
    .full, .fluid {
      margin-bottom: $vertical / 3;
    }
    .fluid img {
      min-width: 200%;
      transform: translateX(-25%);
    }
    .third {
      margin-bottom: $vertical / 3;
      &:last-child {
        margin-bottom: 0;
      }
    }
  }
  .contact {
    .full {
      margin-bottom: 0;
    }
    .third {
      margin-bottom: 20px;
    }
    ul {
      float: left;
    }
    li {
      float: right;
      width: calc(50% - 10px);
      &:first-child {
        width: calc(50% + 10px);
        float: left;
        height: 100px;
      }
    }
    .full {
      margin-top: 0;
      &:last-child {
        margin-top: 20px;
      }
    }
    input[type="text"] {
      width: 70%;
    }
    input[type="submit"] {
      width: 30%;
    }
  }
  footer { 
    height: 150px;
    .full {
      margin: 0;
    }
    .third {
      margin-bottom: $vertical / 6;
    }
  }
}
.tablet {
  
}
.sdesktop {

}
.desktop {
  // section {
  //   padding: $vertical / 2 0 0 0;
  // }
}
.super {

}

.mobile {
  //  background: yellow !important;
}


// Transition In
.hold {
  opacity: 0 !important;
  transform: translateY(50px);
}

.intro {
  .sixth, .burger {
    transition: all $cubic 1s;
  }

  .hero {
    transition: all $cubic 1.5s;
  }
}
/* ... */

